--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ repositories {
 dependencies {
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation 'org.jetbrains:annotations:23.0.0'
-
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation group: 'com.github.scribejava', name: 'scribejava-apis', version: '8.3.1'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '2.5.4'
 
     // Spring Boot Starter
     testImplementation ('org.springframework.boot:spring-boot-starter-test')
